# node-rppal

./: .gitignore  Cargo.toml  LICENSE  README.md  main.js  package.json  qwe.js
.github/workflows/: CI.yml
__test__/: gpio.spec.mjs  index.spec.mjs
mock/: gpio.js  i2c.js  index.js
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
src/: gpio.rs  i2c.rs  lib.rs
