[package]
edition = "2021"
name = "okee-tech_rppal"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
] }
napi-derive = "2.12.2"
rppal = { version = "0.20", features = ["hal"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
